@@ -14,17 +14,15 @@ class SetNextReminderDate implements ShouldQueue
     use Dispatchable, InteractsWithQueue, Queueable, SerializesModels;
 
     protected $reminder;
-    protected $timezone;
 
     /**
      * Create a new job instance.
      *
      * @return void
      */
-    public function __construct(Reminder $reminder, $timezone)
+    public function __construct(Reminder $reminder)
     {
         $this->reminder = $reminder;
-        $this->timezone = $timezone;
     }
 
     /**
@@ -41,7 +39,7 @@ class SetNextReminderDate implements ShouldQueue
 
             default:
                 $this->reminder->last_triggered = $this->reminder->next_expected_date;
-                $this->reminder->calculateNextExpectedDate($this->timezone);
+                $this->reminder->calculateNextExpectedDate();
                 $this->reminder->save();
 
                 $this->reminder->purgeNotifications();
