@@ -105,17 +105,13 @@ class Activity extends Model implements IsJournalableInterface
     }
 
     /**
-     * Get the date_it_happened field according to user's timezone.
+     * Get the date_it_happened field.
      *
      * @param string $value
      * @return string
      */
     public function getDateItHappenedAttribute($value)
     {
-        if (auth()->user()) {
-            return Carbon::parse($value, auth()->user()->timezone);
-        }
-
         return Carbon::parse($value);
     }
 
@@ -137,16 +133,6 @@ class Activity extends Model implements IsJournalableInterface
     public function getDescription()
     {
         return $this->description;
-    }
-
-    /**
-     * Get the date the activity happened.
-     *
-     * @return Carbon
-     */
-    public function getDateItHappened()
-    {
-        return $this->date_it_happened;
     }
 
     /**
